# articubot_one

./: CMakeLists.txt  README.md  frames.gv  my_home_save.pgm  my_home_save.yaml  my_home_serial.data  my_map_save.pgm  my_map_save.yaml  package-lock.json  package.json  package.xml  real_lab_save.pgm  real_lab_save.yaml  real_lab_save_two.pgm  real_lab_save_two.yaml  real_lab_serial.data  real_lab_serial_two.data  room_map_save.pgm  room_map_save.yaml  room_map_serial.data
config/: ball_tracker_params_robot.yaml  map.rviz  my_controllers.yaml  twist_mux.yaml
description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/aws_robomaker_small_warehouse_world/share/aws_robomaker_small_warehouse_world/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ball_tracker/lib/ball_tracker/: detect_ball  detect_ball_3d  follow_ball
install/ball_tracker/share/ball_tracker/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ball_tracker/share/ball_tracker/config/: ball_tracker_params_example.yaml
install/ball_tracker/share/ball_tracker/launch/: ball_tracker.launch.py  example_launch_include.launch.py
install/gazebo_mecanum_plugins/include/gazebo_mecanum_plugins/: gazebo_mecanum_drive.h  gazebo_mecanum_drive_private.h
install/gazebo_mecanum_plugins/share/gazebo_mecanum_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  package.dsv  (+6 more)
install/tf2_web_republisher_py/share/tf2_web_republisher_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: ball_tracker.launch.py  camera.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py  rsp.launch.py
log/: latest_build
src/: CMakeLists.txt
src/config/: ball_tracker_params_robot.yaml  ball_tracker_params_sim.yaml  drive_bot.rviz  empty.yaml  gazebo_params.yaml  joystick.yaml  nav2_params.yaml
src/description/: camera.xacro  face.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  rplidar.launch.py  rsp.launch.py
src/worlds/: obstacles.world
(+587 files in other folders)
